Bug 166542 - Welcome dialog: Animated image broken on macOS
Summary: Welcome dialog: Animated image broken on macOS
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
24.8.0.0 alpha1+
Hardware: All macOS (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:25.8.0
Keywords:
Depends on:
Blocks:
 
Reported: 2025-05-12 13:06 UTC by Heiko Tietze
Modified: 2025-05-15 09:52 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Heiko Tietze 2025-05-12 13:06:16 UTC Comment hidden (obsolete)
Comment 1 Heiko Tietze 2025-05-12 13:06:58 UTC
(In reply to steve from bug 137931 comment #66)
> Created attachment 200749 [details]
> Screenshot 2025-05-12 broken dialog image
> 
> Testing Version: 25.8.0.0.alpha1+ (AARCH64) / LibreOffice Community
> Build ID: 9d973cdf107d1be4db806e6ec8a6ced49275c4e6
> CPU threads: 12; OS: macOS 15.4.1; UI render: Skia/Metal; VCL: osx
> Locale: en-US (en_US.UTF-8); UI: en-US
> Calc: threaded
> 
> (todays main build)
> 
> In safe mode the dialog shows a broken animated graphic. If you share the
> animated image I can test if this is a general problem or if it is limited
> to the implementation in the dialog.
Comment 2 Eyal Rozenberg 2025-05-12 14:47:06 UTC
There's an animated image? I thought we had dropped that. On Linux I didn't see any animation.
Comment 3 steve 2025-05-14 06:30:31 UTC
Thanks for transferring my feedback (https://bugs.documentfoundation.org/show_bug.cgi?id=137931#c66) into a stand-along bug.

Opinion piece: not a fan of a gif in this dialog. Don't think it adds to the appearance of a professional or clean UI.

Ongoing patch: https://gerrit.libreoffice.org/c/core/+/185271
Comment 4 Commit Notification 2025-05-14 11:02:30 UTC
Rania Amina committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/99674b604ee6b6316459ec954e496925a7429f8c

Resolves tdf#166542 - Welcome dialog: Animated image broken on macOS

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Heiko Tietze 2025-05-14 11:02:55 UTC
The image is not animated on macOS now. Thanks to Rania Amina for the improved artwork.
Comment 6 steve 2025-05-15 09:52:10 UTC
Verified in Version: 25.8.0.0.alpha1+ (AARCH64) / LibreOffice Community
Build ID: 901e160d2ea863af71c180980a76a81ec03b6b65
CPU threads: 12; OS: macOS 15.5; UI render: default; VCL: osx
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded