Resolves tdf#166542 - Welcome dialog: Animated image broken on macOS

Change-Id: Icfc4497c48a98e39235df86c8e078b874fb68d12
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/185271
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>